# tt-2024-kyo

./: .clang-format  .gitignore  .gitmodules
client/: CMakeLists.txt  sdl_img.diff
client/engine/: CMakeLists.txt
client/engine/include/Assets/: IImageLoader.hpp  ITextFileLoader.hpp
client/engine/include/Base/: BaseGame.hpp  BasicEvents.hpp  GameConfig.hpp
client/engine/include/ComponentLoaders/: ClickableAreaLoader.hpp  IComponentLoader.hpp  ImageLoader.hpp  ScriptLoader.hpp  TransformLoader.hpp
client/engine/include/Components/: ClickableArea.hpp  Image.hpp  Transform.hpp
client/engine/include/Events/: Event.hpp  EventManager.hpp  IEventListener.hpp
client/engine/include/Graphics/: Color.hpp  IDrawApi.hpp  ImageAsset.hpp  NineSliceData.hpp
client/engine/include/Input/: BaseInputManager.hpp  InputEvents.hpp
client/engine/include/Log/: ILogger.hpp  Level.hpp  Log.hpp
client/engine/include/Math/: IntRect.hpp  Point2d.hpp  Utils.hpp  Vector.hpp
client/engine/include/SceneParser/: ComponentTokens.hpp  ISceneParser.hpp  SceneObjectTokens.hpp
client/engine/include/Scenes/: IRenderable.hpp  IUpdateable.hpp  SceneComponent.hpp  SceneEvents.hpp  SceneLoader.hpp  SceneObject.hpp  ScenePathResolver.hpp  World.hpp  WorldApi.hpp
client/engine/source/Assets/: CMakeLists.txt
client/engine/source/Base/: BaseGame.cpp  CMakeLists.txt
client/engine/source/ComponentLoaders/: CMakeLists.txt  ClickableAreaLoader.cpp  ImageLoader.cpp  TransformLoader.cpp
client/engine/source/Components/: CMakeLists.txt  ClickableArea.cpp  Image.cpp  Transform.cpp
client/engine/source/Events/: CMakeLists.txt
client/engine/source/Graphics/: CMakeLists.txt  Color.cpp  ImageAsset.cpp  NineSliceData.cpp
client/engine/source/Input/: BaseInputManager.cpp  CMakeLists.txt
client/engine/source/Log/: CMakeLists.txt  Log.cpp
client/engine/source/Math/: CMakeLists.txt  IntRect.cpp  Point2d.cpp  Utils.cpp
client/engine/source/SceneParser/: CMakeLists.txt
client/engine/source/Scenes/: CMakeLists.txt  SceneComponent.cpp  SceneLoader.cpp  SceneObject.cpp  ScenePathResolver.cpp  World.cpp
client/game/: CMakeLists.txt  README.md
client/game/include/: config.hpp
client/game/include/cmp/: LoadingScreen.hpp
client/game/include/cmp_load/: LoadingScreenLoader.hpp
client/game/include/rapidjson_scene_parser/: RapidJsonSceneParser.hpp
client/game/include/scripts/: InitScript.hpp  OnClickedSwitchSceneScript.hpp  Scripts.hpp
client/game/include/sdl/: SdlInput.hpp  SdlLogger.hpp  SdlTextFileLoader.hpp  SdlTextureRenderer.hpp
client/game/source/: CMakeLists.txt  main.cpp
client/game/source/cmp/: CMakeLists.txt  LoadingScreen.cpp
client/game/source/cmp_load/: CMakeLists.txt  LoadingScreenLoader.cpp
client/game/source/rapidjson_scene_parser/: CMakeLists.txt  RapidJsonSceneParser.cpp
client/game/source/scripts/: CMakeLists.txt  InitScript.cpp  OnClickedSwitchSceneScript.cpp  Scripts.cpp
client/game/source/sdl/: CMakeLists.txt  SdlInput.cpp  SdlLogger.cpp  SdlTextFileLoader.cpp  SdlTextureRenderer.cpp
client/res/common/scenes/: bread.json  game.json  game_base.json  loading.json  title.json
client/res/web/: index.html  style.css
client/tools/scripts/: build-web-win-dev.bat  build-win-dev.bat
